--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "node scripts/seed-database.js"
   },
   "dependencies": {
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "openai": "^4.0.0"
+    "mongodb": "^5.6.0",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
     "@types/node": "20.3.1",
@@ -21,3 +23,4 @@
     "typescript": "5.1.3"
   }
 }
+
